# docs/openapi.yaml
@@ -141,6 +141,21 @@ paths:
           description: Unauthorized
 
   /api/v1/urls:
+    get:
+      summary: List all Short URLs
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/URLResponse'
+        '401':
+          description: Unauthorized
     post:
       summary: Create a Short URL
       security:
